force-app/main/default/objects/Deal_Participant_Access_Policy__mdt/Deal_Participant_Access_Policy__mdt.object-meta.xml
<CustomObject><label
  >Deal Participant Access Policy</label><pluralLabel
  >Deal Participant Access Policies</pluralLabel><visibility
  >Public</visibility></CustomObject>