force-app/main/default/objects/Deal_Participant_Access_Policy__mdt/fields/Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Access_Level__c</fullName>
    <label>Access Level</label>
    <length>80</length>
    <type>Text</type>
</CustomField>