force-app/main/default/objects/Deal_Participant_Access_Policy__mdt/fields/Can_Collaborate__c.field-meta.xml
<CustomField>
    <fullName>Can_Collaborate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Collaborate</label>
    <type>Checkbox</type>
</CustomField>