force-app/main/default/objects/Deal_Participant_Access_Policy__mdt/fields/Can_Edit_Deal__c.field-meta.xml
<CustomField>
    <fullName>Can_Edit_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Edit Deal</label>
    <type>Checkbox</type>
</CustomField>