force-app/main/default/objects/Deal_Participant_Access_Policy__mdt/fields/Can_View_Customer__c.field-meta.xml
<CustomField>
    <fullName>Can_View_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can View Customer</label>
    <type>Checkbox</type>
</CustomField>