force-app/main/default/objects/Deal_Participant_Access_Policy__mdt/fields/Participant_Role__c.field-meta.xml
<CustomField>
    <fullName>Participant_Role__c</fullName>
    <label>Participant Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>