force-app/main/default/objects/Deal_Participant_Access_Policy__mdt/fields/Policy_Key__c.field-meta.xml
<CustomField>
    <fullName>Policy_Key__c</fullName>
    <label>Policy Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>